<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_limits"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/limit_min"
        android:hint="@string/min_limit"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/limit_avg"
        android:hint="@string/avg_limit"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/limit_max"
        android:hint="@string/max_limit"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_limit"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/limit_total"
        android:hint="@string/total_limit"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>